Material design minor bug fixed.

--- a/symfony_fw/public/scss/system/utility.scss
+++ b/symfony_fw/public/scss/system/utility.scss
@@ -7,7 +7,7 @@ $mdc-theme-secondary: #d50000;
 $mdc-theme-on-secondary: #ffffff;
 $mdc-theme-background: #ffffff;
 $mdc-theme-surface: #ffffff;
-$mdc-theme-on-surface: #868686;
+$mdc-theme-on-surface: #000000b3;
 
 @mixin opacity($value) {
     $msOpacity: $value * 100;
@@ -89,14 +89,12 @@ $mdc-theme-on-surface: #868686;
     clear: both;
 }
 
-.material-icons.md-14 {font-size: 14px;}
-.material-icons.primary {color: $mdc-theme-primary;}
-.material-icons.secondary {color: $mdc-theme-secondary;}
+.material-icons.md-14 {font-size: 14px !important;}
+.material-icons.primary {color: $mdc-theme-primary !important;}
+.material-icons.secondary {color: $mdc-theme-secondary !important;}
 
-/* Rules for using icons as black on a light background. 
-.material-icons.md-dark {color: rgba(0, 0, 0, 0.54);}
-.material-icons.md-dark.md-inactive {color: rgba(0, 0, 0, 0.26);}*/
+.material-icons.md-dark {color: rgba(0, 0, 0, 0.70) !important;}
+.material-icons.md-dark.md-inactive {color: rgba(0, 0, 0, 0.3) !important;}
 
-/* Rules for using icons as white on a dark background.
-.material-icons.md-light {color: rgba(255, 255, 255, 1);}
-.material-icons.md-light.md-inactive {color: rgba(255, 255, 255, 0.3);}*/
+.material-icons.md-light {color: rgba(255, 255, 255, 1) !important;}
+.material-icons.md-light.md-inactive {color: rgba(255, 255, 255, 0.3) !important;}
