--- a/symfony_fw/templates/include/pageComment.html.twig
+++ b/symfony_fw/templates/include/pageComment.html.twig
@@ -33,7 +33,7 @@
     {% endif %}
 {% endif %}
 
-<script type="text/javascript">
+<script>
     var textPageComment = {
         'label_1': "{{"pageComment_2"|trans}}",
         'label_2': "{{"pageComment_3"|trans}}"
