--- a/symfony_fw/templates/include/upload.html.twig
+++ b/symfony_fw/templates/include/upload.html.twig
@@ -1,7 +1,7 @@
 <div class="upload">
     <div class="form_row">
         <div class="material_upload">
-            <button class="mdc-fab" aria-label="Upload" type="button">
+            <button class="mdc-fab" type="button" aria-label="label">
                 <span class="mdc-fab__icon material-icons">cloud_upload</span>
             </button>
             <label>{{label}}</label>
@@ -22,7 +22,7 @@
         </button>
     </div>
 </div>
-<script type="text/javascript">
+<script>
     var textUpload = {
         'label_1': "{{"upload_3"|trans}}",
         'label_2': "{{"upload_4"|trans}}",
