--- a/symfony_fw/templates/include/wysiwyg.html.twig
+++ b/symfony_fw/templates/include/wysiwyg.html.twig
@@ -1,23 +1,23 @@
 <div class="wysiwyg">
     <div class="toolbar">
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Source">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="source">code</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Undo">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="undo">undo</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Redo">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="redo">redo</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Remove format">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="removeFormat">delete_sweep</span>
         </button>
         <div class="icon_container">
-            <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Fore color">
+            <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
                 <span class="mdc-fab__icon material-icons" data-command="foreColor">format_color_text</span>
             </button>
             <input type="color"/>
-            <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Back color">
+            <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
                 <span class="mdc-fab__icon material-icons" data-command="backColor">format_color_fill</span>
             </button>
             <input type="color"/>
@@ -50,60 +50,60 @@
             <label class="mdc-floating-label mdc-floating-label--float-above">{{"wysiwyg_2"|trans}}</label>
             <div class="mdc-line-ripple"></div>
         </div>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Bold">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="bold">format_bold</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Italic">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="italic">format_italic</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Underline">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="underline">format_underline</span>
         </button>
         <br>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Justify left">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="justifyLeft">format_align_left</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Justify center">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="justifyCenter">format_align_center</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Justify right">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="justifyRight">format_align_right</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Justify full">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="justifyFull">format_align_justify</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Indent">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="indent">format_indent_increase</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Outdent">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="outdent">format_indent_decrease</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Unordered list">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="insertUnorderedList">format_list_bulleted</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Order list">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="insertOrderedList">format_list_numbered</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Create link">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="createLink">insert_link</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Remove link">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="unlink">link_off</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="Insert image">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="insertImage">insert_photo</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="custom_button_add">add_box</span>
         </button>
-        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="">
+        <button class="mdc-fab mdc-fab--mini" type="button" aria-label="label">
             <span class="mdc-fab__icon material-icons" data-command="custom_table_add">border_all</span>
         </button>
     </div>
     <iframe class="editor" src="about:blank"></iframe>
     <div class="source" contenteditable="true"></div>
 </div>
-<script type="text/javascript">
+<script>
     var textWysiwyg = {
         'label_1': "{{"wysiwyg_1"|trans}}",
         'label_2': "{{"wysiwyg_2"|trans}}",
