--- a/symfony_fw/templates/render/module/language_page.html.twig
+++ b/symfony_fw/templates/render/module/language_page.html.twig
@@ -19,7 +19,7 @@
         {{form_widget(form._token)}}
     </form>
 </div>
-<script type="text/javascript">
+<script>
     var textLanguagePage = {
         'label_1': "{{"languagePage_1"|trans}}"
     };
