--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -13,7 +13,7 @@
 
         <!-- Meta -->
         <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
         
@@ -81,7 +81,7 @@
         {{-include("@templateRoot/include/flashBag.html.twig")-}}
         {{-include("@templateRoot/include/popup_easy.html.twig")-}}
 
-        <script type="text/javascript">
+        <script>
             {% if (php_session.userActivity is defined) %}
                 var session = {
                     'token': "{{csrf_token("intention")}}",
@@ -195,32 +195,32 @@
             };
         </script>
 
-        <script type="text/javascript" src="{{asset("javascript/library/jquery_3.3.1.min.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/library/jquery-ui_1.12.1.min.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/library/jquery-mobile_1.5.0.min.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/library/material-components-web.min.js")}}"></script>
+        <script src="{{asset("javascript/library/jquery_3.3.1.min.js")}}"></script>
+        <script src="{{asset("javascript/library/jquery-ui_1.12.1.min.js")}}"></script>
+        <script src="{{asset("javascript/library/jquery-mobile_1.5.0.min.js")}}"></script>
+        <script src="{{asset("javascript/library/material-components-web_custom.min.js")}}"></script>
 
-        <script type="text/javascript" src="{{asset("javascript/system/Utility.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/MaterialDesign.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/WidgetSearch.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/WidgetDatePicker.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/Ajax.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/Loader.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/FlashBag.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/PopupEasy.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/Search.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/TableAndPagination.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/Captcha.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/Upload.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/Language.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/Wysiwyg.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/Chaato.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/PageComment.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/Authentication.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/Registration.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/RecoverPassword.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/MenuUser.js")}}"></script>
-        <script type="text/javascript" src="{{asset("javascript/system/Index.js")}}"></script>
+        <script src="{{asset("javascript/system/Utility.js")}}"></script>
+        <script src="{{asset("javascript/system/MaterialDesign.js")}}"></script>
+        <script src="{{asset("javascript/system/WidgetSearch.js")}}"></script>
+        <script src="{{asset("javascript/system/WidgetDatePicker.js")}}"></script>
+        <script src="{{asset("javascript/system/Ajax.js")}}"></script>
+        <script src="{{asset("javascript/system/Loader.js")}}"></script>
+        <script src="{{asset("javascript/system/FlashBag.js")}}"></script>
+        <script src="{{asset("javascript/system/PopupEasy.js")}}"></script>
+        <script src="{{asset("javascript/system/Search.js")}}"></script>
+        <script src="{{asset("javascript/system/TableAndPagination.js")}}"></script>
+        <script src="{{asset("javascript/system/Captcha.js")}}"></script>
+        <script src="{{asset("javascript/system/Upload.js")}}"></script>
+        <script src="{{asset("javascript/system/Language.js")}}"></script>
+        <script src="{{asset("javascript/system/Wysiwyg.js")}}"></script>
+        <script src="{{asset("javascript/system/Chaato.js")}}"></script>
+        <script src="{{asset("javascript/system/PageComment.js")}}"></script>
+        <script src="{{asset("javascript/system/Authentication.js")}}"></script>
+        <script src="{{asset("javascript/system/Registration.js")}}"></script>
+        <script src="{{asset("javascript/system/RecoverPassword.js")}}"></script>
+        <script src="{{asset("javascript/system/MenuUser.js")}}"></script>
+        <script src="{{asset("javascript/system/Index.js")}}"></script>
         
         {{-include("@templateRoot/layout/layout_site_custom.html.twig")-}}
     </body>
