Performance increase - Work in progress.

--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -200,27 +200,27 @@
         <script src="{{asset("javascript/library/jquery-mobile_1.5.0.min.js")}}"></script>
         <script src="{{asset("javascript/library/material-components-web_custom.min.js")}}"></script>
 
-        <script src="{{asset("javascript/system/Utility.js")}}"></script>
-        <script src="{{asset("javascript/system/MaterialDesign.js")}}"></script>
-        <script src="{{asset("javascript/system/WidgetSearch.js")}}"></script>
-        <script src="{{asset("javascript/system/WidgetDatePicker.js")}}"></script>
-        <script src="{{asset("javascript/system/Ajax.js")}}"></script>
-        <script src="{{asset("javascript/system/Loader.js")}}"></script>
-        <script src="{{asset("javascript/system/FlashBag.js")}}"></script>
-        <script src="{{asset("javascript/system/PopupEasy.js")}}"></script>
-        <script src="{{asset("javascript/system/Search.js")}}"></script>
-        <script src="{{asset("javascript/system/TableAndPagination.js")}}"></script>
-        <script src="{{asset("javascript/system/Captcha.js")}}"></script>
-        <script src="{{asset("javascript/system/Upload.js")}}"></script>
-        <script src="{{asset("javascript/system/Language.js")}}"></script>
-        <script src="{{asset("javascript/system/Wysiwyg.js")}}"></script>
-        <script src="{{asset("javascript/system/Chaato.js")}}"></script>
-        <script src="{{asset("javascript/system/PageComment.js")}}"></script>
-        <script src="{{asset("javascript/system/Authentication.js")}}"></script>
-        <script src="{{asset("javascript/system/Registration.js")}}"></script>
-        <script src="{{asset("javascript/system/RecoverPassword.js")}}"></script>
-        <script src="{{asset("javascript/system/MenuUser.js")}}"></script>
-        <script src="{{asset("javascript/system/Index.js")}}"></script>
+        <script src="{{asset("javascript/system/Utility.min.js")}}"></script>
+        <script src="{{asset("javascript/system/MaterialDesign.min.js")}}"></script>
+        <script src="{{asset("javascript/system/WidgetSearch.min.js")}}"></script>
+        <script src="{{asset("javascript/system/WidgetDatePicker.min.js")}}"></script>
+        <script src="{{asset("javascript/system/Ajax.min.js")}}"></script>
+        <script src="{{asset("javascript/system/Loader.min.js")}}"></script>
+        <script src="{{asset("javascript/system/FlashBag.min.js")}}"></script>
+        <script src="{{asset("javascript/system/PopupEasy.min.js")}}"></script>
+        <script src="{{asset("javascript/system/Search.min.js")}}"></script>
+        <script src="{{asset("javascript/system/TableAndPagination.min.js")}}"></script>
+        <script src="{{asset("javascript/system/Captcha.min.js")}}"></script>
+        <script src="{{asset("javascript/system/Upload.min.js")}}"></script>
+        <script src="{{asset("javascript/system/Language.min.js")}}"></script>
+        <script src="{{asset("javascript/system/Wysiwyg.min.js")}}"></script>
+        <script src="{{asset("javascript/system/Chaato.min.js")}}"></script>
+        <script src="{{asset("javascript/system/PageComment.min.js")}}"></script>
+        <script src="{{asset("javascript/system/Authentication.min.js")}}"></script>
+        <script src="{{asset("javascript/system/Registration.min.js")}}"></script>
+        <script src="{{asset("javascript/system/RecoverPassword.min.js")}}"></script>
+        <script src="{{asset("javascript/system/MenuUser.min.js")}}"></script>
+        <script src="{{asset("javascript/system/Index.min.js")}}"></script>
         
         {{-include("@templateRoot/layout/layout_site_custom.html.twig")-}}
     </body>
