--- a/symfony_fw/templates/render/myPage.html.twig
+++ b/symfony_fw/templates/render/myPage.html.twig
@@ -41,5 +41,5 @@
         'label_2': "{{"myPage_5"|trans}}"
     };
 </script>
-<script src="{{asset("javascript/system/my_page/MyPageProfile.js")}}"></script>
-<script src="{{asset("javascript/system/my_page/MyPagePayment.js")}}"></script>
+<script src="{{asset("javascript/system/my_page/MyPageProfile.min.js")}}"></script>
+<script src="{{asset("javascript/system/my_page/MyPagePayment.min.js")}}"></script>
