--- a/symfony_fw/templates/render/control_panel.html.twig
+++ b/symfony_fw/templates/render/control_panel.html.twig
@@ -96,7 +96,7 @@
                             'label_2': "{{"controlPanelPayment_3"|trans}}"
                         };
                     </script>
-                    <script src="{{asset("javascript/system/control_panel/Payment.js")}}"></script>
+                    <script src="{{asset("javascript/system/control_panel/Payment.min.js")}}"></script>
                 {% endif %}
             {% elseif urlExtra == "cp_page" or urlExtra == "cp_page_create" or urlExtra == "cp_page_select" %}
                 {% if is_granted("ROLE_ADMIN") == true or is_granted("ROLE_MODERATOR") == true %}
@@ -127,7 +127,7 @@
                             'label_2': "{{"controlPanelPage_3"|trans}}"
                         };
                     </script>
-                    <script src="{{asset("javascript/system/control_panel/Page.js")}}"></script>
+                    <script src="{{asset("javascript/system/control_panel/Page.min.js")}}"></script>
                 {% endif %}
             {% elseif urlExtra == "cp_user" or urlExtra == "cp_user_create" or urlExtra == "cp_user_select" %}
                 {% if is_granted("ROLE_ADMIN") == true or is_granted("ROLE_MODERATOR") == true %}
@@ -158,7 +158,7 @@
                             'label_2': "{{"controlPanelUser_3"|trans}}"
                         };
                     </script>
-                    <script src="{{asset("javascript/system/control_panel/User.js")}}"></script>
+                    <script src="{{asset("javascript/system/control_panel/User.min.js")}}"></script>
                 {% endif %}
             {% elseif urlExtra == "cp_module" or urlExtra == "cp_module_create" or urlExtra == "cp_module_select" %}
                 {% if is_granted("ROLE_ADMIN") == true or is_granted("ROLE_MODERATOR") == true %}
@@ -189,7 +189,7 @@
                             'label_2': "{{"controlPanelModule_3"|trans}}"
                         };
                     </script>
-                    <script src="{{asset("javascript/system/control_panel/Module.js")}}"></script>
+                    <script src="{{asset("javascript/system/control_panel/Module.min.js")}}"></script>
                 {% endif %}
             {% elseif urlExtra == "cp_role" or urlExtra == "cp_role_create" or urlExtra == "cp_role_select" %}
                 {% if is_granted("ROLE_ADMIN") == true or is_granted("ROLE_MODERATOR") == true %}
@@ -220,7 +220,7 @@
                             'label_2': "{{"controlPanelRole_3"|trans}}"
                         };
                     </script>
-                    <script src="{{asset("javascript/system/control_panel/RoleUser.js")}}"></script>
+                    <script src="{{asset("javascript/system/control_panel/RoleUser.min.js")}}"></script>
                 {% endif %}
             {% elseif urlExtra == "cp_setting" %}
                 {% if is_granted("ROLE_ADMIN") == true %}
@@ -237,7 +237,7 @@
                             'label_1': "{{"controlPanelSetting_2"|trans}}"
                         };
                     </script>
-                    <script src="{{asset("javascript/system/control_panel/Setting.js")}}"></script>
+                    <script src="{{asset("javascript/system/control_panel/Setting.min.js")}}"></script>
                 {% endif %}
             {% elseif urlExtra == "cp_setting_slack_iw" %}
                 {% if is_granted("ROLE_ADMIN") == true %}
@@ -254,7 +254,7 @@
                             'label_1': "{{"controlPanelSettingSlack_2"|trans}}"
                         };
                     </script>
-                    <script src="{{asset("javascript/system/control_panel/SettingSlackIw.js")}}"></script>
+                    <script src="{{asset("javascript/system/control_panel/SettingSlackIw.min.js")}}"></script>
                 {% endif %}
             {% elseif urlExtra == "cp_setting_line" %}
                 {% if is_granted("ROLE_ADMIN") == true %}
@@ -271,7 +271,7 @@
                             'label_1': "{{"controlPanelSettingLine_2"|trans}}"
                         };
                     </script>
-                    <script src="{{asset("javascript/system/control_panel/SettingLinePush.js")}}"></script>
+                    <script src="{{asset("javascript/system/control_panel/SettingLinePush.min.js")}}"></script>
                 {% endif %}
             {% elseif (urlExtra == "cp_microservice_deploy" or urlExtra == "cp_microservice_deploy_create" or "cp_microservice_deploy_select" in urlExtra) %}
                 {% if is_granted("ROLE_ADMIN") == true or is_granted("ROLE_MICROSERVICE") == true %}
@@ -305,7 +305,7 @@
                             'label_3': "{{"controlPanelMicroserviceDeploy_4"|trans}}"
                         };
                     </script>
-                    <script src="{{asset("javascript/system/control_panel/MicroserviceDeploy.js")}}"></script>
+                    <script src="{{asset("javascript/system/control_panel/MicroserviceDeploy.min.js")}}"></script>
                 {% endif %}
             {% elseif (urlExtra == "cp_microservice_api" or urlExtra == "cp_microservice_api_create" or "cp_microservice_api_profile" in urlExtra) %}
                 {% if is_granted("ROLE_ADMIN") == true or is_granted("ROLE_MICROSERVICE") == true %}
@@ -332,8 +332,8 @@
                             'label_1': "{{"apiBasic_1"|trans}}"
                         };
                     </script>
-                    <script src="{{asset("javascript/system/control_panel/MicroserviceApi.js")}}"></script>
-                    <script src="{{asset("javascript/system/control_panel/ApiBasic.js")}}"></script>
+                    <script src="{{asset("javascript/system/control_panel/MicroserviceApi.min.js")}}"></script>
+                    <script src="{{asset("javascript/system/control_panel/ApiBasic.min.js")}}"></script>
                 {% endif %}
             {% endif %}
         </div>
