Minor bug fixed.

--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -12,7 +12,7 @@
         <title>{{websiteName}}</title>
 
         <!-- Meta -->
-        <meta charset="utf-8"/>
+        <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
@@ -24,7 +24,7 @@
         {% else %}
             <meta name="description" content=""/>
             <meta name="keywords" content=""/>
-            <meta name="robots" content="noindex, nofollow"/>
+            <meta name="robots" content="index, follow"/>
         {% endif %}
         
         {{-include("@templateRoot/include/google_script.html.twig")-}}
