Minor bug fixed;

--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -22,8 +22,8 @@
             <meta name="keywords" content="{{pageRow['meta_keywords']}}"/>
             <meta name="robots" content="{{pageRow['meta_robots']}}"/>
         {% else %}
-            <meta name="description" content=""/>
-            <meta name="keywords" content=""/>
+            <meta name="description" content="..."/>
+            <meta name="keywords" content="..."/>
             <meta name="robots" content="index, follow"/>
         {% endif %}
         
