Session timeout user and javascript form data work in progress.

--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -84,7 +84,7 @@
         <script>
             var session = {
                 'token': "{{csrf_token("intention")}}",
-                'userActivity': "{{php_session.userActivity}}",
+                'userInform': "{{php_session.userInform}}",
                 'languageTextCode': "{{php_session.languageTextCode}}",
                 'currentPageId': "{{php_session.currentPageId}}"
             };
