--- a/symfony_fw/templates/render/control_panel/setting.html.twig
+++ b/symfony_fw/templates/render/control_panel/setting.html.twig
@@ -86,6 +86,7 @@
             {{form_row(form.recoverPassword)}}
             {{form_row(form.captcha)}}
             {{form_row(form.useType)}}
+            {{form_row(form.secretPassphrase, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         </div>
     </fieldset>
     <fieldset class="accordion_container">
