--- a/symfony_fw/templates/microservice/api/basic/create.html.twig
+++ b/symfony_fw/templates/microservice/api/basic/create.html.twig
@@ -7,7 +7,7 @@
         
         <form id="form_cp_apiBasic_create" action="{{path("cp_apiBasic_create", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
-            {{form_row(form.token, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+            {{form_row(form.tokenName, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             
             <p class="info_field">{% trans %}apiBasicFormType_3_i{% endtrans %}</p>
             {{form_row(form.ip, {'dense': "", 'styleType': "outlinedTrailing"})}}
@@ -15,7 +15,10 @@
             {{form_row(form.urlCallback, {'dense': "", 'styleType': "outlinedTrailing"})}}
             {{form_row(form.databaseIp, {'dense': "", 'styleType': "outlinedTrailing"})}}
             {{form_row(form.databaseName, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            
+            <p class="info_field">{% trans %}apiBasicFormType_7_i{% endtrans %}</p>
             {{form_row(form.databaseUsername, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            
             {{form_row(form.databasePassword, {'dense': "", 'styleType': "outlinedTrailing"})}}
             {{form_row(form.active)}}
             {{form_row(form.slackActive)}}
