--- a/symfony_fw/templates/render/control_panel/microservice_deploy_create.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_deploy_create.html.twig
@@ -11,28 +11,36 @@
         {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.description, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.systemUser, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
-        {{form_row(form.sshUsername, {'dense': "", 'styleType': "outlinedTrailing"})}}
-        {{form_row(form.sshPassword, {'dense': "", 'styleType': "outlinedTrailing"})}}
         
         <div>
-            {{form_row(form.keyPublic, {'label': "microserviceDeployFormType_6"})}}
-            {{form_row(form.removeKeyPublic)}}
+            <p class="info_field">{% trans %}microserviceDeployFormType_4_i{% endtrans %}</p>
+            {{form_row(form.sshUsername, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            {{form_row(form.sshPassword, {'dense': "", 'styleType': "outlinedTrailing"})}}
         </div>
-        <div>
-            {{form_row(form.keyPrivate, {'label': "microserviceDeployFormType_8"})}}
-            {{form_row(form.removeKeyPrivate)}}
+        
+        <div class="microservice_deploy_group">
+            <div class="container">
+                {{form_row(form.keyPublic, {'label': "microserviceDeployFormType_6"})}}
+                {{form_row(form.removeKeyPublic)}}
+            </div>
+            <div class="container">
+                {{form_row(form.keyPrivate, {'label': "microserviceDeployFormType_8"})}}
+                {{form_row(form.removeKeyPrivate)}}
+            </div>
         </div>
         
         {{form_row(form.ip, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.gitUserEmail, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.gitUserName, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.gitCloneUrl, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+        {{form_row(form.gitCloneUrlUsername, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+        {{form_row(form.gitCloneUrlPassword, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.gitClonePath, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.userGitScript, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.userWebScript, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.rootWebPath, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         
-        <p class="info_field">{% trans %}microserviceDeployFormType_18_i{% endtrans %}</p>
+        <p class="info_field">{% trans %}microserviceDeployFormType_20_i{% endtrans %}</p>
         {{form_row(form.command, {'dense': "", 'styleType': "outlinedTrailing"})}}
         
         {{form_widget(form._token)}}
