--- a/symfony_fw/templates/render/module/page_view.html.twig
+++ b/symfony_fw/templates/render/module/page_view.html.twig
@@ -20,7 +20,7 @@
 {% endblock %}
 {% block moduleFooter %}
     <div class="page_footer">
-        {% if settingRow['page_date'] == true %}
+        {% if settingRow['page_date'] == true and (urlCurrentPageId == 2 or urlCurrentPageId > 5) %}
             <div class="mdc-typography--caption page_detail">
                 {% if (response.values.userCreate != "-" and response.values.userModify == "-") %}
                     <p><i class="material-icons md-14">pets</i> <span class="mdc-theme--on-surface">{% trans %}pageView_1{% endtrans %}</span>{{response.values.userCreate}}</p>
