Minor bug fixed and security improved.

--- a/symfony_fw/templates/render/control_panel/setting_slack_iw.html.twig
+++ b/symfony_fw/templates/render/control_panel/setting_slack_iw.html.twig
@@ -16,6 +16,7 @@
             
             {{form_widget(form.submit, {'dense': "", 'raised': ""})}}
             
+            <p class="info_field">{% trans %}settingSlackIw_4{% endtrans %}</p>
             <div class="wordTag_container">
                 {{response.values.wordTagListHtml|raw}}
             </div>
