--- a/symfony_fw/templates/render/control_panel/setting_line_push.html.twig
+++ b/symfony_fw/templates/render/control_panel/setting_line_push.html.twig
@@ -9,27 +9,26 @@
             <button class="mdc-button mdc-button--dense mdc-button--raised button_reset" type="button">{% trans %}settingLinePush_3{% endtrans %}</button>
             
             {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
-            {{form_row(form.userId, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+            {{form_row(form.userIdPrimary, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             {{form_row(form.accessToken, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             
             {{form_widget(form._token)}}
             
             {{form_widget(form.submit, {'dense': "", 'raised': ""})}}
             
+            <p class="info_field">{% trans %}settingLinePush_4{% endtrans %}</p>
             <div class="wordTag_container">
                 {{response.values.wordTagListHtml|raw}}
             </div>
             
-            {% if (response.values.listHtml is defined and response.values.count > 0) %}
-                <div id="cp_setting_line_push_user_result">
-
-                    {{-include("@templateRoot/include/table_and_pagination.html.twig")-}}
-                    
-                    <div class="list_result">
-                        {{response.values.listHtml|raw}}
-                    </div>
+            <div id="cp_setting_line_push_user_result">
+                
+                {{-include("@templateRoot/include/table_and_pagination.html.twig")-}}
+                
+                <div class="list_result">
+                    {{response.values.listHtml|raw}}
                 </div>
-            {% endif %}
+            </div>
         </div>
     </fieldset>
 </form>
